2022-05-07T16:05:01Z:
* notice: last 14d: all unq: 1 1
* notice: prev accum: outdated-all outdated-unq / all unq: 7 3 / 10 5
* notice: next accum: outdated-all outdated-unq / all unq: 10 5 / 11 6
* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0

2022-04-20T08:07:51Z:
* notice: last 14d: all unq: 6 2
* notice: prev accum: outdated-all outdated-unq / all unq: 4 2 / 7 3
* notice: next accum: outdated-all outdated-unq / all unq: 4 2 / 10 5
* notice: prev json diff // prev day diff: unq all: +2 +3 / -0 -0 // +2 +3 / -0 -0

2022-04-18T16:06:31Z:
* notice: last 14d: all unq: 3 1
* notice: prev accum: outdated-all outdated-unq / all unq: 1 1 / 4 2
* notice: next accum: outdated-all outdated-unq / all unq: 4 2 / 7 3
* notice: prev json diff // prev day diff: unq all: +1 +3 / -0 -0 // +1 +3 / -0 -0

2022-04-03T08:08:10Z:
* notice: last 14d: all unq: 3 1
* notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 1 1
* notice: next accum: outdated-all outdated-unq / all unq: 1 1 / 4 2
* notice: prev json diff // prev day diff: unq all: +1 +3 / -0 -0 // +1 +3 / -0 -0