@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-07T16:05:01Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
+  "timestamp" : "2022-05-08T00:27:07Z",
+  "count" : 5,
+  "count_minmax" : [ 1, 5 ],
   "count_prev_day_inc" : 1,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
