@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-07T16:05:01Z",
+  "timestamp" : "2022-05-08T00:27:07Z",
   "count_outdated" : 10,
   "uniques_outdated" : 5,
-  "count" : 11,
+  "count" : 15,
   "uniques" : 6,
   "views" : [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 5,
+      "count_minmax": [ 1, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
