@@ -1,10 +1,10 @@
 {
-  "count": 1,
+  "count": 5,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-07T00:00:00Z",
-      "count": 1,
+      "count": 5,
       "uniques": 1
     }
   ]
