@@ -1,3 +1,9 @@
+2022-05-08T00:27:07Z:
+* notice: last 14d: all unq: 5 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 10 5 / 11 6
+* notice: next accum: outdated-all outdated-unq / all unq: 10 5 / 15 6
+* notice: prev json diff // prev day diff: unq all: +0 +4 / -0 -0 // +0 +4 / -0 -0
+
 2022-05-07T16:05:01Z:
 * notice: last 14d: all unq: 1 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 7 3 / 10 5
